--- a/src/main/resources/template.html
+++ b/src/main/resources/template.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{title}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         @font-face {
             font-family: Whitney;
@@ -43,6 +44,13 @@
             padding: 0;
         }
 
+        code {
+            border-color: #212326;
+            border-style: solid;
+            border-width: thin;
+            border-radius: 3px;
+        }
+
         .message-container {
             display: flex;
             flex-direction: column;
@@ -65,4 +73,88 @@
         }
     </style>
 </head>
+<script charset="UTF-8" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"></script>
+<script>
+    hljs.initHighlightingOnLoad();
+</script>
+<style>
+    .hljs {
+        display: block;
+        overflow-x: auto;
+        padding: 0.5em;
+        background: #2c2f33;
+        color: #839496;
+    }
+
+    .hljs-comment,
+    .hljs-quote {
+        color: #586e75;
+    }
+
+    /* Solarized Green */
+    .hljs-keyword,
+    .hljs-selector-tag,
+    .hljs-addition {
+        color: #859900;
+    }
+
+    /* Solarized Cyan */
+    .hljs-number,
+    .hljs-string,
+    .hljs-meta .hljs-meta-string,
+    .hljs-literal,
+    .hljs-doctag,
+    .hljs-regexp {
+        color: #2aa198;
+    }
+
+    /* Solarized Blue */
+    .hljs-title,
+    .hljs-section,
+    .hljs-name,
+    .hljs-selector-id,
+    .hljs-selector-class {
+        color: #268bd2;
+    }
+
+    /* Solarized Yellow */
+    .hljs-attribute,
+    .hljs-attr,
+    .hljs-variable,
+    .hljs-template-variable,
+    .hljs-class .hljs-title,
+    .hljs-type {
+        color: #b58900;
+    }
+
+    /* Solarized Orange */
+    .hljs-symbol,
+    .hljs-bullet,
+    .hljs-subst,
+    .hljs-meta,
+    .hljs-meta .hljs-keyword,
+    .hljs-selector-attr,
+    .hljs-selector-pseudo,
+    .hljs-link {
+        color: #cb4b16;
+    }
+
+    /* Solarized Red */
+    .hljs-built_in,
+    .hljs-deletion {
+        color: #dc322f;
+    }
+
+    .hljs-formula {
+        background: #073642;
+    }
+
+    .hljs-emphasis {
+        font-style: italic;
+    }
+
+    .hljs-strong {
+        font-weight: bold;
+    }
+</style>
 </html>
